# vibe-coding-platform

./: .gitignore  .tmp-install-hermes-nas.sh  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vercel.json  vite.config.mjs
.tmp_fluxio_harness/: control-room.json  entry.jsx  index.html  tauri-core-stub.js  tauri-event-stub.js
.tmp_render_debug/: FluxioShell.bundle.cjs  tauri-core-stub.js  tauri-event-stub.js
config/: challenge_presets.json  connected_apps.json  constitution.json  modes.json  personas.json  profiles.json  skills.json
desktop-ui/: FluxioDesktop.jsx  MissionControlPrimitives.jsx  app.js  fixtureManifest.js  fixtures.js  fluxioHelpers.js  helpers.js  index.html  live.js  missionControlModel.js  styles.css
docs/: AGENT_CONSTITUTION.md  AGENT_CONTROL_PROTOCOL.md  AI_AGENT_USABILITY_ASSESSMENT.md  AUTOMATION_LOCALHOST_API.md  CHATGPT_TERMINOLOGY_THEO_GAP.md  CLI_REFERENCE.md  CODEX_APP_FEATURES_2026-05-03.md  CURRENT_SYSTEM_CRITICAL_AUDIT_2026-05-30.md  DESKTOP_PERFORMANCE_REPORT.md  DICTATION_SETUP.md  FLUXIO_1_0_POLISH_PLAN.md  FLUXIO_1_0_RELEASE.md  FLUXIO_BIGGER_PROOF_SLASH_GOAL.md  FLUXIO_OPERATOR_TUTORIAL.md  FLUXIO_SYSTEM_IMPROVEMENT_AUDIT_2026-05-29.md  HANDOFF_PACKET_SCHEMA.md  INSPIRATION_SOURCES.md  LIVE_UI_DEVELOPMENT.md  MODEL_HARDNESS_ROUTING_NOTES.md  NAS_MISSION_PROGRESS_2026-05-28.md  NIGHT_MODE.md  NOTIFICATION_BOT_ARCHITECTURE.md  OPENCODEGO_PROVIDER_SETUP.md  OPERATOR_UI_BAD_VS_BEST_RESEARCH_2026-06-08.md  OPERATOR_UI_GOAL_COMPLETION_AUDIT_2026-06-08.md  OPERATOR_UI_VISUAL_AUDIT_2026-06-07.md  PRD.md  PROOF_REPORT_PANEL.md  PROVIDER_ECOSYSTEM_UPDATE_PLAN.md  PR_STACK_AUDIT_2026-06-21.md  PR_STACK_HEALTH.md  PUBLIC_SHARING_GUIDE.md  REAL_FEATURE_AUDIT_2026-04-27.md  ROADMAP.md  RUNTIME_LANE_PROOF.md  RUNTIME_SKILL_RED_TEAM_PROBE_PLAN.md  SOLANTIR_MINDTOWER_JBHEAVEN_FUSION_INVENTORY.md  SOLANTIR_MINDTOWER_JBHEAVEN_FUSION_INVENTORY_DATA.json  SYNOLOGY_NAS_SETUP.md  SYSTEM_GAP_ANALYSIS.current.md  (+8 more)
handoff/: glm52-agent-live-premium-ui-mission-2026-06-30.md  live-agent-runtime-handoff-2026-06-29.md  live-agent-runtime-production-update-2026-06-29.MANIFEST.md
scripts/: advance_route_trust_sampling_loop.py  advance_self_improvement_red_team_loop.py  archive_release_proofs.py  benchmark_board_visual_smoke.py  codex_local_oauth_helper.py  control_route_smoke.mjs  (+58 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1071 files in other folders)
