[package]
name = "vibe-coding-platform"
version = "0.1.0"
description = "Vibe Coding Platform desktop shell"
authors = ["Paul"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vibe_coding_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
memory-stats = "1.2.0"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time", "net", "io-util", "sync"] }
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "handshake"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
keyring = { version = "3.6.3", default-features = false, features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }
arboard = "3.6.1"
active-win-pos-rs = "0.9.1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
